--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "demo-web",
-  "version": "0.0.0",
+  "name": "twichu-web",
+  "version": "0.0.1",
   "scripts": {
-    "build": "cd client && npm run build",
     "server": "cd server && npm start",
-    "client": "cd client && npm run dev",
+    "client": "cd client && npm run build",
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
