--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "demo-web-server",
-  "version": "0.0.0",
+  "name": "twichu-web-server",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
+    "connect-ensure-login": "^0.1.1",
     "connect-history-api-fallback": "^1.5.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "mongoose": "^5.0.11",
     "morgan": "~1.9.0",
-    "pug": "^2.0.2",
-    "stylus": "^0.54.5"
+    "passport": "^0.4.0",
+    "passport-twitter": "^1.0.4"
   }
 }
