--- a/server/package.json
+++ b/server/package.json
@@ -18,5 +18,10 @@
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-twitter": "^1.0.4"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.10.0"
   }
 }
