--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "vue": "^2.5.2",
+    "vue-authenticate": "^1.3.4",
+    "vue-axios": "^2.1.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
