--- a/server/package.json
+++ b/server/package.json
@@ -6,18 +6,23 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "connect-ensure-login": "^0.1.1",
     "connect-history-api-fallback": "^1.5.0",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "mongoose": "^5.0.11",
     "morgan": "~1.9.0",
+    "oauth": "^0.9.15",
+    "oauth-signature": "^1.5.0",
     "passport": "^0.4.0",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "unix-timestamp": "^0.2.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
