--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "vue": "^2.5.2",
     "vue-authenticate": "^1.3.4",
     "vue-axios": "^2.1.1",
+    "vue-google-adsense": "^1.2.0",
     "vue-masonry": "^0.11.4",
     "vue-router": "^3.0.1",
+    "vue-script2": "^2.0.3",
     "vue-tweet-embed": "^2.1.1",
     "vuex": "^3.0.1"
   },
